# Spectofind

./: .gitignore  README.md  project_report.md  pyproject.toml
src/spectofind/: __init__.py  config.py  dataset.py  evaluate.py  infer.py  model.py  preprocessing.py  train.py
src/spectofind/beats/: BEATs.py  __init__.py  backbone.py  modules.py
src/spectofind/features/: __init__.py
ui/backend/: beats_engine.py  inference_engine.py  main.py
ui/backend/routers/: dashboard.py  inference.py
ui/frontend/: index.html  vite.config.ts
ui/frontend/src/: App.tsx  api.ts  index.css  types.ts
ui/frontend/src/components/: Dashboard.tsx  SpectrogramCanvas.tsx  Studio.tsx
ui/frontend/src/hooks/: useAudioStream.ts
